<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_main"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FF5F9E"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <!-- Radio group and buttons to select score from list of available scores:   -->
    <RadioGroup
        android:id="@+id/radio_group_score_options"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:layout_marginStart="40dp"
        android:orientation="horizontal"
        android:checkedButton="@id/radio_button_one"
        >

        <RadioButton
            android:id="@+id/radio_button_one"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/score_1"
            android:padding="8dp"
            style="@style/score_style" />

        <RadioButton
            android:id="@+id/radio_button_two"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/score_2"
            android:padding="8dp"
            style="@style/score_style"/>

        <RadioButton
            android:id="@+id/radio_button_three"
            android:layout_weight="1"
            android:padding="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/score_3"
            style="@style/score_style"/>


    </RadioGroup>


    <!-- Linear Layout containing UI elements to display and increase score of both teams: -->
    <LinearLayout
        android:id="@+id/ll_score_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <!--  UI elements for displaying and incrementing score for team 1: -->
    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/ll_team_one"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

<!--        Textview to display name of team 1: -->
        <TextView
            android:id="@+id/tv_team_one"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/team_1"
            style="@style/heading2" />


        <!--        Textview to display Score of team 1: -->
        <TextView
            android:id="@+id/tv_score_one"
            android:text="@string/team_1_score"
            style="@style/team_score_style"/>


        <!--        ImageButton containing icon to increase score of team 1: -->
        <ImageButton
            android:id="@+id/ib_increment_one"
            android:src="@drawable/round_control_point_24"
            style="@style/increment_btn_style"
            android:contentDescription="@string/increment_score" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <!--  UI elements for displaying and incrementing score for team 1-->
    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/ll_team_two"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <!--        Textview to display name of team 1: -->
        <TextView
            android:id="@+id/tv_team_two"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/team_2"
            style="@style/heading2"/>

        <!--        Textview to display Score of team 1: -->
        <TextView
            android:id="@+id/tv_score_two"
            android:text="@string/team_2_score"
            style="@style/team_score_style"/>

        <!--        ImageButton containing icon to increase score of team 1: -->
        <ImageButton
            android:id="@+id/ib_increment_two"
            android:src="@drawable/round_control_point_24"
            style="@style/increment_btn_style"
            android:contentDescription="@string/increment_score" />
    </androidx.appcompat.widget.LinearLayoutCompat>
    </LinearLayout>

</LinearLayout>